# politeia-rs

./: .dockerignore  .gitignore  .rustc_info.json  Cargo.toml  Dockerfile  readme.md
.github/workflows/: ci.yml
politeia/: .gitignore  Cargo.toml
politeia-api/: Cargo.toml
politeia-api/src/: lib.rs
politeia-api/src/v1/: constants.rs  enum_values.rs  errors.rs  mod.rs  routes.rs  types.rs
politeia/src/: main.rs  model.rs  server.rs  types.rs
politeia/templates/: README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
politeia/templates/src/: Types.ts  main.ts
politeia/templates/src/components/: HelloWorld.vue
politeia/templates/src/pages/Home/: App.vue  main.ts
politeia/templates/src/pages/Home/components/: HomeComponents.vue
politeia/templates/src/pages/Proposal/: App.vue  main.ts
politeia/templates/src/plugins/: axios.js
